# GadgetFinder

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
data/: prog.file
gadgetfinder/: gadget.py  ropshell.py  trie.py
src/: prog  shell.py
src/gadgetfinder/: __init__.py  gadget.py  gadget_finder.py  shell.py  utils.py
