[metadata]
name = gadgetfinder
version = 0.0.1
author = 733g10
author_email = rla141@sfu.ca, zma30@sfu.ca, zca110@sfu.ca
description = A tool with interactive shell for finding gadgets in executable files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/jmc0/GadgetFinder
project_urls =
    Bug Tracker = https://https://github.com/jmc0/GadgetFinder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.6
install_requires= 
    capstone
    keystone
    pyelftools
    pefile

[options.packages.find]
where = src
